[gd_scene load_steps=5 format=3 uid="uid://c8qltnyl7h32m"]

[ext_resource type="Script" path="res://scripts/pause.gd" id="1_1s7ya"]
[ext_resource type="Script" path="res://scripts/controls.gd" id="2_8kx3x"]
[ext_resource type="Texture2D" uid="uid://nptv6fq0n1qk" path="res://assets/reset_arrow.png" id="3_6s7j8"]
[ext_resource type="Theme" uid="uid://4io2orq0lfor" path="res://themes/ui_theme.tres" id="4_4ced8"]

[node name="pause_menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1s7ya")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -4974.0
offset_top = -2785.0
offset_right = 4974.0
offset_bottom = 2785.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.333333)

[node name="MarginContainer" type="MarginContainer" parent="."]
custom_minimum_size = Vector2(250, 250)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="MarginContainer"]
layout_mode = 2

[node name="TabContainer" type="TabContainer" parent="MarginContainer/AspectRatioContainer"]
layout_mode = 2
current_tab = 3

[node name="paused" type="TabBar" parent="MarginContainer/AspectRatioContainer/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/AspectRatioContainer/TabContainer/paused"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 12.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="MarginContainer/AspectRatioContainer/TabContainer/paused/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 55
text = "PAUSED"
horizontal_alignment = 1

[node name="display" type="TabBar" parent="MarginContainer/AspectRatioContainer/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 1

[node name="gameplay" type="TabBar" parent="MarginContainer/AspectRatioContainer/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 2

[node name="controls" type="TabBar" parent="MarginContainer/AspectRatioContainer/TabContainer"]
layout_mode = 2
script = ExtResource("2_8kx3x")
metadata/_tab_index = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/AspectRatioContainer/TabContainer/controls"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -283.0
offset_top = 28.0
offset_right = 283.0
offset_bottom = 164.0
grow_horizontal = 2

[node name="FOV" type="HBoxContainer" parent="MarginContainer/AspectRatioContainer/TabContainer/controls/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_constants/separation = 15

[node name="slider_label" type="Label" parent="MarginContainer/AspectRatioContainer/TabContainer/controls/VBoxContainer/FOV"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 28
text = "FOV:
"
horizontal_alignment = 2

[node name="fov_slider" type="HSlider" parent="MarginContainer/AspectRatioContainer/TabContainer/controls/VBoxContainer/FOV"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
size_flags_vertical = 1
min_value = 1.0
step = 0.001
value = 50.0
rounded = true

[node name="default_btn" type="TextureButton" parent="MarginContainer/AspectRatioContainer/TabContainer/controls/VBoxContainer/FOV"]
modulate = Color(0.764706, 0.764706, 0.764706, 1)
show_behind_parent = true
clip_children = 2
custom_minimum_size = Vector2(35, 35)
layout_direction = 1
layout_mode = 2
texture_normal = ExtResource("3_6s7j8")
ignore_texture_size = true
stretch_mode = 5
flip_h = true

[node name="slider_value" type="Label" parent="MarginContainer/AspectRatioContainer/TabContainer/controls/VBoxContainer/FOV"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 0
theme_override_font_sizes/font_size = 25
horizontal_alignment = 1

[node name="Sensitivity" type="HBoxContainer" parent="MarginContainer/AspectRatioContainer/TabContainer/controls/VBoxContainer"]
layout_mode = 2

[node name="sens_label" type="Label" parent="MarginContainer/AspectRatioContainer/TabContainer/controls/VBoxContainer/Sensitivity"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 0
theme_override_font_sizes/font_size = 28
text = "Sensitivity:
"
horizontal_alignment = 2

[node name="sens_slider" type="HSlider" parent="MarginContainer/AspectRatioContainer/TabContainer/controls/VBoxContainer/Sensitivity"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
size_flags_vertical = 1
min_value = 1.0
step = 0.001
value = 50.0
rounded = true

[node name="default_btn" type="TextureButton" parent="MarginContainer/AspectRatioContainer/TabContainer/controls/VBoxContainer/Sensitivity"]
modulate = Color(0.764706, 0.764706, 0.764706, 1)
show_behind_parent = true
clip_children = 2
custom_minimum_size = Vector2(35, 35)
layout_direction = 1
layout_mode = 2
texture_normal = ExtResource("3_6s7j8")
ignore_texture_size = true
stretch_mode = 5
flip_h = true

[node name="sens_value" type="Label" parent="MarginContainer/AspectRatioContainer/TabContainer/controls/VBoxContainer/Sensitivity"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 0
theme = ExtResource("4_4ced8")
theme_override_font_sizes/font_size = 28
horizontal_alignment = 2

[node name="Placeholder" type="HBoxContainer" parent="MarginContainer/AspectRatioContainer/TabContainer/controls/VBoxContainer"]
layout_mode = 2

[node name="name2" type="Label" parent="MarginContainer/AspectRatioContainer/TabContainer/controls/VBoxContainer/Placeholder"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 0
theme_override_font_sizes/font_size = 28
text = "Placeholder:"
horizontal_alignment = 2

[node name="slider2" type="HSlider" parent="MarginContainer/AspectRatioContainer/TabContainer/controls/VBoxContainer/Placeholder"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
size_flags_vertical = 1
min_value = 1.0
step = 0.001
value = 50.0
rounded = true

[node name="default_btn" type="TextureButton" parent="MarginContainer/AspectRatioContainer/TabContainer/controls/VBoxContainer/Placeholder"]
modulate = Color(0.764706, 0.764706, 0.764706, 1)
show_behind_parent = true
clip_children = 2
custom_minimum_size = Vector2(35, 35)
layout_direction = 1
layout_mode = 2
texture_normal = ExtResource("3_6s7j8")
ignore_texture_size = true
stretch_mode = 5
flip_h = true

[node name="value2" type="Label" parent="MarginContainer/AspectRatioContainer/TabContainer/controls/VBoxContainer/Placeholder"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 0
horizontal_alignment = 2

[node name="debug" type="TabBar" parent="MarginContainer/AspectRatioContainer/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 4

[connection signal="value_changed" from="MarginContainer/AspectRatioContainer/TabContainer/controls/VBoxContainer/FOV/fov_slider" to="MarginContainer/AspectRatioContainer/TabContainer/controls" method="_fov_slider_changed"]
[connection signal="pressed" from="MarginContainer/AspectRatioContainer/TabContainer/controls/VBoxContainer/FOV/default_btn" to="MarginContainer/AspectRatioContainer/TabContainer/controls" method="_fov_default_pressed"]
[connection signal="value_changed" from="MarginContainer/AspectRatioContainer/TabContainer/controls/VBoxContainer/Sensitivity/sens_slider" to="MarginContainer/AspectRatioContainer/TabContainer/controls" method="_sensitivity_slider_changed"]
[connection signal="pressed" from="MarginContainer/AspectRatioContainer/TabContainer/controls/VBoxContainer/Sensitivity/default_btn" to="MarginContainer/AspectRatioContainer/TabContainer/controls" method="_sensitivity_default_pressed"]
[connection signal="pressed" from="MarginContainer/AspectRatioContainer/TabContainer/controls/VBoxContainer/Placeholder/default_btn" to="MarginContainer/AspectRatioContainer/TabContainer/controls" method="_fov_default_pressed"]
